[gd_scene load_steps=2 format=3 uid="uid://b9x8k7v6m5nqp"]

[ext_resource type="Script" path="res://algorithms/wavefunctions/sine_space/SineSpace.gd" id="1_sine_space"]

[node name="SineSpace" type="Node3D"]
script = ExtResource("1_sine_space")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866, 0, -0.866, 0.5, 0, 12, 8)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 15, 0)
light_energy = 1.2

[node name="SineSurface" type="Node3D" parent="."]

[node name="TopologyIndicators" type="Node3D" parent="."]

[node name="FrequencyControl" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, -3, 0)
top_radius = 0.3
bottom_radius = 0.3
height = 1.0

[node name="AmplitudeControl" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, -3, 0)
top_radius = 0.3
bottom_radius = 0.3
height = 1.0

[node name="PhaseControl" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, -3, 0)
top_radius = 0.3
bottom_radius = 0.3
height = 1.0

[node name="TopologyMode" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -3, 0)
size = Vector3(0.8, 1, 0.4)
